; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/fc660c/extr_actuation_point.c_actuation_point_up.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/fc660c/extr_actuation_point.c_actuation_point_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @actuation_point_up() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @read_rdac()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @write_rdac(i64 0)
  br label %11

7:                                                ; preds = %0
  %8 = load i64, i64* %1, align 8
  %9 = sub nsw i64 %8, 1
  %10 = call i32 @write_rdac(i64 %9)
  br label %11

11:                                               ; preds = %7, %5
  ret void
}

declare dso_local i64 @read_rdac(...) #1

declare dso_local i32 @write_rdac(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
